--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -148,8 +148,15 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if request.path.startswith('/tables') %}active{% endif %}" href="/tables">
-                    <i class="fas fa-table"></i>Tables
+                <a class="nav-link" href="{{ url_for('main.tables') }}">
+                    <i class="fas fa-table"></i>
+                    <span>Tables</span>
+                </a>
+            </li>
+            <li class="nav-item mt-auto">
+                <a class="nav-link text-danger" href="{{ url_for('main.logout') }}">
+                    <i class="fas fa-sign-out-alt"></i>
+                    <span>Logout</span>
                 </a>
             </li>
         </ul>
