--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -17,7 +17,7 @@
                             <i class="fas fa-chart-bar me-2"></i>Descriptive Analytics
                         </a>
                         <a href="{{ url_for('main.predictive') }}" class="btn btn-outline-light btn-lg">
-                            <i class="fas fa-chart-bar me-2"></i>Predictive Analytics
+                            <i class="fas fa-brain me-2"></i>Predictive Analytics
                         </a>
                     </div>
                 </div>
